@@ -23,6 +23,7 @@ import java.util.concurrent.atomic.AtomicInteger;
 import org.apache.lucene.analysis.MockAnalyzer;
 import org.apache.lucene.document.Document;
 import org.apache.lucene.store.Directory;
+import org.apache.lucene.store.MockDirectoryWrapper;
 import org.apache.lucene.util.LuceneTestCase;
 
 public class TestNRTReaderWithThreads extends LuceneTestCase {
@@ -30,6 +31,9 @@ public class TestNRTReaderWithThreads extends LuceneTestCase {
 
   public void testIndexing() throws Exception {
     Directory mainDir = newDirectory();
+    if (mainDir instanceof MockDirectoryWrapper) {
+      ((MockDirectoryWrapper)mainDir).setAssertNoDeleteOpenFile(true);
+    }
     IndexWriter writer = new IndexWriter(
         mainDir,
         newIndexWriterConfig(TEST_VERSION_CURRENT, new MockAnalyzer(random())).
